fixed page visibility in mobile

--- a/styles/experience.css
+++ b/styles/experience.css
@@ -7,3 +7,7 @@
 li {
     margin: 10px;
 }
+
+ul{
+    padding-inline-start: 10px;
+}
