--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -2,7 +2,7 @@
 body {
     font-family: "Lato", sans-serif;
     margin: 5px !important;
-    overflow: hidden;
+    overflow: auto;
   }
 
   #footer{
@@ -120,7 +120,7 @@ body {
     font-size: 1.6em;
     vertical-align: bottom;
     text-align: center;
-    margin-top: 1em;
+    margin-top: 2em;
   }
 
   /* body {
@@ -208,6 +208,7 @@ body {
     border: none;
     border-radius: 5px;
     transition: .5s;
+    position:fixed;
   }
   
   #openbtn:hover {
